--- a/Localizations/Dutch.lang
+++ b/Localizations/Dutch.lang
@@ -45,8 +45,8 @@
 	toDirectory = "naar map",
 	copying = "kopiëren",
 	faylaBlyad = "Bestand",
-	
 	areYouSure = "Weet je het zeker?",
+	
 	emptyTrash = "Leeg prullenbak",
 	type = "Type",
 	size = "Grootte",
@@ -58,8 +58,8 @@
 	calculatingSize = "Berekenen…",
 	filesWillBeRemovedPermanently = "bestand(en) worden permanent verwijderd",
 	fileDeletingFailure = "Kan bestand niet verwijderen",
-	
 	properties = "Instellingen",
+	
 	newFolderFromChosen = "Nieuwe map van gekozen",
 	create = "Nieuw",
 	newFolder = "Map",
@@ -89,29 +89,28 @@
 	flashEEPROM = "Flashen naar EEPROM",
 	flashingEEPROM = "Bezig met flashen. Sluit de computer niet af...",
 	print3D = "Afdrukmodel",
-	
 	sortBy = "Sorteer",
 	sortByType = "Op type",
+	
 	sortByName = "Op naam",
 	sortByDate = "Op datum",
-	
 	aboutSystem = "Over systeem",
 	updates = "Updates",
+	
 	update = "Vernieuwen",
 	shutdown = "Sluit af",
 	logout = "Log uit",
 	reboot = "Herstart",
-	
 	shortcutIsCorrupted = "Snelkoppeling bestaat niet meer",
 	sortAutomatically = "Uitlijnen op raster",
 	onDesktop = "Op bureaublad",
-	inCurrentDirectory = "In huidige map",
 	
+	inCurrentDirectory = "In huidige map",
 	errorWhileRunningProgram = "Fout tijdens ",
 	yourContacts = "Jou contacten",
 	additionalInfo = "Extra informatie",
-	stackTraceback = "Stack herleiden",
 	
+	stackTraceback = "Stack herleiden",
 	favourite = "Favoriete",
 	search = "Zoeken",
 	mounts = "Gekoppelde apparaten",
@@ -119,6 +118,10 @@
 	uploadToPastebin = "Uploaden naar Pastebin",
 	pasteName = "Plak naam",
 	uploading = "Bezig met uploaden...",
+	
 	uploadingSuccess = "Geüpload naar ",
-	uploadingFailure = "Uploaden mislukt: "
+	uploadingFailure = "Uploaden mislukt: ",
+	takeScreenshot = "Screenshot maken",
+	save = "Redden",
+	deleteWithSource = "Verwijderen met bron"
 }
