--- a/Localizations/Finnish.lang
+++ b/Localizations/Finnish.lang
@@ -45,8 +45,8 @@
 	toDirectory = "kansiosta",
 	copying = "Kopioidaan",
 	faylaBlyad = "tiedosto",
-	
 	areYouSure = "Oletko varma?",
+	
 	emptyTrash = "Tyhjää roskakori",
 	type = "Tyyppi",
 	size = "Koko",
@@ -58,8 +58,8 @@
 	calculatingSize = "lasketaan…",
 	filesWillBeRemovedPermanently = "tiedosto(t) poistetaan pysyvästi",
 	fileDeletingFailure = "Tiedoston poistaminen epäonnistui",
-	
 	properties = "Ominaisuudet",
+	
 	newFolderFromChosen = "Uusi kansio valinnasta",
 	create = "Uusi",
 	newFolder = "Kansio",
@@ -89,29 +89,28 @@
 	flashEEPROM = "Polta EEPROMiin",
 	flashingEEPROM = "Poltto käynnissä, älä sammuta tietokonetta...",
 	print3D = "Tulosta malli",
-	
 	sortBy = "Lajittele",
 	sortByType = "Tyypin mukaan",
+	
 	sortByName = "Nimen mukaan",
 	sortByDate = "Päivämärän mukaan",
-	
 	aboutSystem = "Tietoja...",
 	updates = "Päivitykset",
+	
 	update = "Päivitä",
 	shutdown = "Sammuta tietokone",
 	logout = "Kirjaudu ulos",
 	reboot = "Käynnistä uudelleen",
-	
 	shortcutIsCorrupted = "Lähdetiedosto puuttuu",
 	sortAutomatically = "Ruudukoi",
 	onDesktop = "Työpöydällä",
-	inCurrentDirectory = "Tämänhetkisessä tiedostossa",
 	
+	inCurrentDirectory = "Tämänhetkisessä tiedostossa",
 	errorWhileRunningProgram = "Virhe suorittaessa ",
 	yourContacts = "Yhteystietosi",
 	additionalInfo = "Lisätiedot",
-	stackTraceback = "Pinon jäljitys",
 	
+	stackTraceback = "Pinon jäljitys",
 	favourite = "Suosikki",
 	search = "Haku",
 	mounts = "Asemat",
@@ -119,6 +118,10 @@
 	uploadToPastebin = "Lataa Pastebiniin",
 	pasteName = "Paste-nimi",
 	uploading = "Lataus käynnissä...",
+	
 	uploadingSuccess = "Ladattu ",
-	uploadingFailure = "Lataus epäonnistui: "
+	uploadingFailure = "Lataus epäonnistui: ",
+	save = "Tallentaa",
+	deleteWithSource = "Poista lähteen kanssa",
+	takeScreenshot = "Ota kuvakaappaus"
 }
