--- a/Localizations/Spanish.lang
+++ b/Localizations/Spanish.lang
@@ -45,8 +45,8 @@
 	toDirectory = "a carpeta",
 	copying = "Copiando",
 	faylaBlyad = "archivo",
-	
 	areYouSure = "Estas Seguro?",
+	
 	emptyTrash = "Papelera Vacia",
 	type = "Tipo",
 	size = "Tamaño",
@@ -58,8 +58,8 @@
 	calculatingSize = "calculando…",
 	filesWillBeRemovedPermanently = "los archivos se eliminarán de forma permanente",
 	fileDeletingFailure = "No se pudo eliminar el archivo",
-	
 	properties = "Propiedades",
+	
 	newFolderFromChosen = "Nueva carpeta desde Directorio",
 	create = "Nuevo",
 	newFolder = "Carpeta",
@@ -89,29 +89,28 @@
 	flashEEPROM = "Flashear a la EEPROM",
 	flashingEEPROM = "Flasheo en progreso, no apage el ordenador...",
 	print3D = "Imprimir Modelo",
-	
 	sortBy = "Ordenar",
 	sortByType = "Por Tipo",
+	
 	sortByName = "Por Nombre",
 	sortByDate = "Por Fecha",
-	
 	aboutSystem = "Sobre el Sistema",
 	updates = "Actualizaciones",
+	
 	update = "Actualizar",
 	shutdown = "Apagar",
 	logout = "Cerrar Sesion",
 	reboot = "Reiniciar",
-	
 	shortcutIsCorrupted = "El Acceso Directo esta linkeado a un archivo que no existe",
 	sortAutomatically = "Alinear a la Cuadricula",
 	onDesktop = "En el Escritorio",
-	inCurrentDirectory = "En la Carpeta Actual",
 	
+	inCurrentDirectory = "En la Carpeta Actual",
 	errorWhileRunningProgram = "Error al ejecutar ",
 	yourContacts = "Tus Contactos",
 	additionalInfo = "Informacion Adicional",
-	stackTraceback = "Seguimiento de pila",
 	
+	stackTraceback = "Seguimiento de pila",
 	favourite = "Favoritos",
 	search = "Buscar",
 	mounts = "monturas",
@@ -119,6 +118,10 @@
 	uploadToPastebin = "Subir a Pastebin",
 	pasteName = "Pegar nombre",
 	uploading = "Subiendo...",
+	
 	uploadingSuccess = "Subido a ",
-	uploadingFailure = "Subida Fallida: "
+	uploadingFailure = "Subida Fallida: ",
+	takeScreenshot = "Tomar captura de pantalla",
+	save = "Ahorrar",
+	deleteWithSource = "Eliminar con fuente"
 }
