--- a/Localizations/Ukrainian.lang
+++ b/Localizations/Ukrainian.lang
@@ -45,8 +45,8 @@
 	toDirectory = "в каталозі",
 	copying = "Копіювання",
 	faylaBlyad = "файла",
-
 	areYouSure = "Ви впевнені?",
+	
 	emptyTrash = "Очистити кошик",
 	type = "Тип",
 	size = "Розмір",
@@ -58,8 +58,8 @@
 	calculatingSize = "йде підсумок…",
 	filesWillBeRemovedPermanently = "файл(и) буде видалено назавжди",
 	fileDeletingFailure = "Не вдалося видалити файл",
-
 	properties = "Властивості",
+	
 	newFolderFromChosen = "Нова папка з обраного",
 	create = "Створити",
 	newFolder = "Папку",
@@ -90,36 +90,38 @@
 	flashEEPROM = "Записати на EEPROM",
 	flashingEEPROM = "Йде запис на EEPROM. Не вимикайте комп'ютер...",
 	print3D = "Роздрукувати модель",
-
 	sortBy = "Сортувати",
+	
 	sortByType = "По типу",
 	sortByName = "По імені",
 	sortByDate = "По даті",
-
 	aboutSystem = "Про систему",
+	
 	updates = "Оновлення",
 	update = "Оновити",
 	shutdown = "Вимкнути",
 	logout = "Вихід із системи",
 	reboot = "Перезавантажити",
-
 	shortcutIsCorrupted = "Ярлик пов'язаний з неіснуючим файлом",
 	sortAutomatically = "Вирівняти по сітці",
+	
 	onDesktop = "На робочому столі",
 	inCurrentDirectory = "В поточному каталозі",
-
 	errorWhileRunningProgram = "Помилка під час роботи ",
 	yourContacts = "Ваші контакти",
+	
 	additionalInfo = "Додаткова інформація",
 	stackTraceback = "Стек помилки",
-
 	favourite = "Обране",
 	search = "Пошук",
+	
 	mounts = "Пристрої",
-
 	uploadToPastebin = "Завантажити на Pastebin",
 	pasteName = "Ім'я файлу після завантаження",
+	
 	uploading = "Йде завантаження файла...",
 	uploadingSuccess = "Завантажено за посиланням ",
-	uploadingFailure = "Помилка при завантаженні: "
+	uploadingFailure = "Помилка при завантаженні: ",
+	save = "зберегти",
+	takeScreenshot = "Зробити знімок екрану"
 }
