--- a/Applications/App Market.app/Localizations/Bengali.lang
+++ b/Applications/App Market.app/Localizations/Bengali.lang
@@ -14,23 +14,23 @@
 	yourText = "আপনি:",
 	hereBeYourDialogs = "এখানে আপনার কথোপকথন হবে",
 	hideApplicationIcons = "অ্যাপ্লিকেশন আইকন লুকান",
-	
 	categoryOverview = "ওভারভিউ",
+	
 	categoryApplications = "অ্যাপ্লিকেশন",
 	categoryLibraries = "লাইব্রেরি",
 	categoryScripts = "স্ক্রিপ্ট",
 	categoryUpdates = "আপডেট",
 	categoryWallpapers = "ওয়ালপেপার",
-	
 	statisticsNewUser = "নতুন ব্যবহারকারী",
+	
 	statisticsMostPopularUser = "সবচেয়ে সক্রিয়",
 	statisticsUsersCount = "ব্যবহারকারী গণনা",
 	statisticsPublicationsCount = "প্রকাশনা গণনা",
 	statisticsReviewsCount = "রিভিউ গণনা",
 	statisticsPopularPublication = "(জনপ্রিয় প্রকাশনা)",
 	statisticsMessagesCount = "বার্তা গণনা",
-	
 	whatsNew = "নতুন কি",
+	
 	whatsNewInVersion = "সংস্করণে নতুন কি আছে",
 	areYouSure = "আপনি কি নিশ্চিত প্রকাশনা মুছে দিতে চান?",
 	createShortcut = "ডেস্কটপ শর্টকাট তৈরি কর",
@@ -54,8 +54,8 @@
 	relativePath = "আপেক্ষিক পাথ",
 	localizationDependency = "স্থানীয়করণ ফাইল",
 	login = "প্রবেশ করুন",
-	
 	profile = "প্রোফাইল",
+	
 	nickname = "ডাকনাম",
 	password = "পাসওয়ার্ড",
 	nicknameOrEmail = "ই-মেইল বা ডাকনাম",
@@ -75,8 +75,8 @@
 	createAccount = "হিসাব তৈরি কর",
 	registrationSuccessfull = "আপনার অ্যাকাউন্ট যাচাই করতে আপনার ই-মেইল এবং স্প্যাম ফোল্ডার চেক করুন",
 	search = "অনুসন্ধান করুন",
-	
 	byPopularity = "জনপ্রিয়তা দ্বারা",
+	
 	byRating = "রেটিং দ্বারা",
 	byDate = "তারিখ অনুসারে",
 	byName = "নামে",
@@ -90,8 +90,8 @@
 	updateAll = "সব আপডেট",
 	noUpdates = "আপনার কোন আপডেট নেই",
 	changeReview = "পর্যালোচনা পরিবর্তন করুন",
-	
 	developer = "বিকাশকারী",
+	
 	version = "সংস্করণ",
 	license = "লাইসেন্স",
 	category = "শ্রেণী",
@@ -111,5 +111,6 @@
 	usersLoveReview = "ব্যবহারকারীরা এই পর্যালোচনা সহায়ক বলে মনে করেছেন",
 	thanksForVote = "আপনার মতামতের জন্য ধন্যবাদ.",
 	previewDepencency = "পূর্বরূপ চিত্র",
-	uniqueDownloads = "অনন্য ডাউনলোড"
+	uniqueDownloads = "অনন্য ডাউনলোড",
+	hideApplicationPreviews = "অ্যাপ্লিকেশন পূর্বরূপ লুকান"
 }
