--- a/Applications/App Market.app/Localizations/German.lang
+++ b/Applications/App Market.app/Localizations/German.lang
@@ -14,23 +14,23 @@
 	yourText = "Sie:",
 	hereBeYourDialogs = "Hier werden Ihre Gespräche",
 	hideApplicationIcons = "Anwendungssymbole ausblenden",
-	
 	categoryOverview = "Überblick",
+	
 	categoryApplications = "Anwendungen",
 	categoryLibraries = "Bibliothek",
 	categoryScripts = "Skript",
 	categoryUpdates = "Aktualisierung",
 	categoryWallpapers = "Hintergrundbilder",
-	
 	statisticsNewUser = "Neuer Benutzer",
+	
 	statisticsMostPopularUser = "Aktivsten",
 	statisticsUsersCount = "Anzahl der Benutzer",
 	statisticsPublicationsCount = "Publikationen zählen",
 	statisticsReviewsCount = "Bewertungen zählen",
 	statisticsPopularPublication = "(beliebte Publikation)",
 	statisticsMessagesCount = "Nachrichten zählen",
-	
 	whatsNew = "Was gibt ' s neues",
+	
 	whatsNewInVersion = "Was in der version neu ist",
 	areYouSure = "Möchten Sie die Veröffentlichung wirklich löschen?",
 	createShortcut = "Desktop-Verknüpfung erstellen",
@@ -54,8 +54,8 @@
 	relativePath = "Relativer Pfad",
 	localizationDependency = "Lokalisierungsdatei",
 	login = "Anmelden",
-	
 	profile = "Profil",
+	
 	nickname = "Spitzname",
 	password = "Passwort",
 	nicknameOrEmail = "E-Mail oder Spitzname",
@@ -75,8 +75,8 @@
 	createAccount = "Konto erstellen",
 	registrationSuccessfull = "Überprüfen Sie Ihren E-mail-und spam-Ordner, um Ihr Konto zu überprüfen",
 	search = "Suche",
-	
 	byPopularity = "Nach Beliebtheit",
+	
 	byRating = "Nach Bewertung",
 	byDate = "Nach Datum",
 	byName = "Namentlich",
@@ -90,8 +90,8 @@
 	updateAll = "Alle aktualisieren",
 	noUpdates = "Sie haben keine updates",
 	changeReview = "Überprüfung ändern",
-	
 	developer = "Entwickler",
+	
 	version = "Ausführung",
 	license = "Lizenz",
 	category = "Zimmerkategorie",
@@ -111,5 +111,6 @@
 	usersLoveReview = "Benutzer fanden diese Bewertung hilfreich",
 	thanksForVote = "Vielen Dank für Ihre Meinung.",
 	previewDepencency = "Vorschaubild",
-	uniqueDownloads = "Einzigartige Downloads"
+	uniqueDownloads = "Einzigartige Downloads",
+	hideApplicationPreviews = "Anwendungsvorschauen ausblenden"
 }
