--- a/Applications/App Market.app/Localizations/Hindi.lang
+++ b/Applications/App Market.app/Localizations/Hindi.lang
@@ -14,23 +14,23 @@
 	yourText = "आप:",
 	hereBeYourDialogs = "यहां आपकी बातचीत होगी",
 	hideApplicationIcons = "एप्लिकेशन आइकन छुपाएं",
-	
 	categoryOverview = "अवलोकन",
+	
 	categoryApplications = "अनुप्रयोग",
 	categoryLibraries = "पुस्तकालयों",
 	categoryScripts = "स्क्रिप्ट",
 	categoryUpdates = "अपडेट",
 	categoryWallpapers = "वॉलपेपर",
-	
 	statisticsNewUser = "नए उपयोगकर्ता",
+	
 	statisticsMostPopularUser = "सर्वाधिक क्रियाशील",
 	statisticsUsersCount = "उपयोगकर्ता गिनती",
 	statisticsPublicationsCount = "प्रकाशन गिनती",
 	statisticsReviewsCount = "समीक्षा गिनती",
 	statisticsPopularPublication = "(लोकप्रिय प्रकाशन)",
 	statisticsMessagesCount = "संदेश गिनती",
-	
 	whatsNew = "नया क्या है",
+	
 	whatsNewInVersion = "संस्करण में नया क्या है",
 	areYouSure = "क्या आप वाकई प्रकाशन हटाना चाहते हैं?",
 	createShortcut = "डेस्कटॉप शॉर्टकट बनाएं",
@@ -54,8 +54,8 @@
 	relativePath = "तुलनात्मक पथ",
 	localizationDependency = "स्थानीयकरण फ़ाइल",
 	login = "लॉग इन करें",
-	
 	profile = "प्रोफ़ाइल",
+	
 	nickname = "उपनाम",
 	password = "पासवर्ड",
 	nicknameOrEmail = "ई-मेल या उपनाम",
@@ -75,8 +75,8 @@
 	createAccount = "खाता बनाएं",
 	registrationSuccessfull = "अपना खाता सत्यापित करने के लिए अपना ई-मेल और स्पैम फ़ोल्डर जांचें",
 	search = "खोज",
-	
 	byPopularity = "लोकप्रियता से",
+	
 	byRating = "रेटिंग के अनुसार",
 	byDate = "तिथि के अनुसार",
 	byName = "नाम से",
@@ -90,8 +90,8 @@
 	updateAll = "सब अद्यतित",
 	noUpdates = "आपके पास कोई अपडेट नहीं है",
 	changeReview = "समीक्षा बदलें",
-	
 	developer = "डेवलपर",
+	
 	version = "संस्करण",
 	license = "लाइसेंस",
 	category = "श्रेणी",
@@ -111,5 +111,6 @@
 	usersLoveReview = "उपयोगकर्ताओं को यह समीक्षा मददगार लगी",
 	thanksForVote = "आपकी राय के लिए धन्यवाद।",
 	uniqueDownloads = "अद्वितीय डाउनलोड",
-	previewDepencency = "छवि का पूर्वावलोकन करें"
+	previewDepencency = "छवि का पूर्वावलोकन करें",
+	hideApplicationPreviews = "एप्लिकेशन पूर्वावलोकन छुपाएं"
 }
