--- a/Applications/App Market.app/Localizations/Italian.lang
+++ b/Applications/App Market.app/Localizations/Italian.lang
@@ -14,23 +14,23 @@
 	yourText = "Si:",
 	hereBeYourDialogs = "Ecco le vostre conversazioni",
 	hideApplicationIcons = "Nascondi le icone delle applicazioni",
-	
 	categoryOverview = "Panoramica",
+	
 	categoryApplications = "Applicazione",
 	categoryLibraries = "Biblioteca",
 	categoryScripts = "Script",
 	categoryUpdates = "Aggiornare",
 	categoryWallpapers = "Sfondi",
-	
 	statisticsNewUser = "Nuovo utente",
+	
 	statisticsMostPopularUser = "Più attivo",
 	statisticsUsersCount = "Gli utenti contano",
 	statisticsPublicationsCount = "Conta delle pubblicazioni",
 	statisticsReviewsCount = "Conta recensioni",
 	statisticsPopularPublication = "(pubblicazione popolare)",
 	statisticsMessagesCount = "Conta messaggi",
-	
 	whatsNew = "Cosa c'è di nuovo",
+	
 	whatsNewInVersion = "Cosa c'è di nuovo in versione",
 	areYouSure = "Eliminare veramente la pubblicazione?",
 	createShortcut = "Crea scorciatoia da scrivania",
@@ -54,8 +54,8 @@
 	relativePath = "Percorso relativo",
 	localizationDependency = "File di localizzazione",
 	login = "Login",
-	
 	profile = "Profilo",
+	
 	nickname = "Nomignolo",
 	password = "Parola d'ordine",
 	nicknameOrEmail = "E-Mail o soprannome",
@@ -75,8 +75,8 @@
 	createAccount = "Crea account",
 	registrationSuccessfull = "Controlla la tua cartella e-mail e spam per verificare il tuo account",
 	search = "Ricerca",
-	
 	byPopularity = "Di popolarità",
+	
 	byRating = "Per valutazione",
 	byDate = "Per data",
 	byName = "Per nome",
@@ -90,8 +90,8 @@
 	updateAll = "Aggiorna tutti",
 	noUpdates = "Non avete aggiornamenti",
 	changeReview = "Modifica revisione",
-	
 	developer = "Sviluppatore",
+	
 	version = "Versione",
 	license = "Licenza",
 	category = "Categoria",
@@ -111,5 +111,6 @@
 	usersLoveReview = "gli utenti hanno trovato utile questa recensione",
 	thanksForVote = "Grazie per la tua opinione.",
 	previewDepencency = "Anteprima dell'immagine",
-	uniqueDownloads = "Download unici"
+	uniqueDownloads = "Download unici",
+	hideApplicationPreviews = "Nascondi le anteprime delle applicazioni"
 }
