--- a/Applications/App Market.app/Localizations/Portuguese.lang
+++ b/Applications/App Market.app/Localizations/Portuguese.lang
@@ -14,23 +14,23 @@
 	yourText = "Vocês:",
 	hereBeYourDialogs = "Aqui estarão suas conversas",
 	hideApplicationIcons = "Ocultar ícones de aplicativos",
-	
 	categoryOverview = "Visão geral",
+	
 	categoryApplications = "Formulários",
 	categoryLibraries = "Bibliotecas",
 	categoryScripts = "Roteiros",
 	categoryUpdates = "Atualizações",
 	categoryWallpapers = "Papeis de parede",
-	
 	statisticsNewUser = "Novo usuário",
+	
 	statisticsMostPopularUser = "Mais ativo",
 	statisticsUsersCount = "Contagem de usuários",
 	statisticsPublicationsCount = "Contagem de publicações",
 	statisticsReviewsCount = "Contagem de avaliações",
 	statisticsPopularPublication = "(publicação popular)",
 	statisticsMessagesCount = "Contagem de mensagens",
-	
 	whatsNew = "O que há de novo",
+	
 	whatsNewInVersion = "O que há de novo na versão",
 	areYouSure = "Tem certeza de que deseja excluir a publicação?",
 	createShortcut = "Criar atalho na área de trabalho",
@@ -54,8 +54,8 @@
 	relativePath = "Caminho relativo",
 	localizationDependency = "Arquivo de localização",
 	login = "Conecte-se",
-	
 	profile = "Perfil",
+	
 	nickname = "Apelido",
 	password = "Senha",
 	nicknameOrEmail = "E-mail ou apelido",
@@ -75,8 +75,8 @@
 	createAccount = "Criar Conta",
 	registrationSuccessfull = "Verifique sua pasta de e-mail e spam para verificar sua conta",
 	search = "Procurar",
-	
 	byPopularity = "Por popularidade",
+	
 	byRating = "Por classificação",
 	byDate = "Por data",
 	byName = "Por nome",
@@ -90,8 +90,8 @@
 	updateAll = "Atualize tudo",
 	noUpdates = "Você não tem atualizações",
 	changeReview = "Alterar revisão",
-	
 	developer = "Desenvolvedor",
+	
 	version = "Versão",
 	license = "Licença",
 	category = "Categoria",
@@ -111,5 +111,6 @@
 	usersLoveReview = "os usuários acharam esta análise útil",
 	thanksForVote = "Obrigado pela sua opinião.",
 	previewDepencency = "Visualizar imagem",
-	uniqueDownloads = "Downloads exclusivos"
+	uniqueDownloads = "Downloads exclusivos",
+	hideApplicationPreviews = "Ocultar visualizações de aplicativos"
 }
