Fix broken keys in Lolcat translations

--- a/Applications/Picture Edit.app/Localizations/Lolcat.lang
+++ b/Applications/Picture Edit.app/Localizations/Lolcat.lang
@@ -1,29 +1,29 @@
 {
 	recentColors = "Resent colors",
 	toolProperties = "Tool propertiez",
-	aboutTool = "bout tool",
+	aboutTool = "Bout tool",
 	size = "Siez: ",
 	path = "Path: ",
 	save = "Saev",
 	saveAs = "Saev as",
-	ok = "k",
+	ok = "K",
 	cancel = "Cancel",
 	fileName = "Fiel naym",
-	newPicture = "nu pictuer",
+	newPicture = "Nu pictuer",
 	width = "Width",
 	height = "Heiet",
 	open = "Open",
 	openRecent = "Open resent",
 	openFromURL = "Open frum URL",
 	file = "Fiel",
-	new = "nu",
-	downloading = "downloadin fiel...",
+	new = "Nu",
+	downloading = "Downloadin fiel...",
 	view = "View",
 	transBack = "Transparency bakground",
 	transFor = "Transparency foreground",
 	hotkeys = "Hotkeys",
 	hotkeysText = {
-		"thar r sum hotkeys dat werkz egsaktly likes in real fotoshop:",
+		"Thar r sum hotkeys dat werkz egsaktly likes in real fotoshop:",
 		" ",
 		"M - selecshun tool",
 		"V - moov tool",
@@ -38,14 +38,14 @@
 		"X - switch colors",
 		"D - reset drawing colors"
 	},
-	tool1 = "selecshun tool allowz u 2 select preferrd area on imaeg an 2 perform sum operashuns on it. Green dots mean start an end pointz (4 exampel, it needz 2 lien rasterization)",
+	tool1 = "Selecshun tool allowz u 2 select preferrd area on imaeg an 2 perform sum operashuns on it. Green dots mean start an end pointz (4 exampel, it needz 2 lien rasterization)",
 	fill = "Fill",
 	outline = "Outlien",
 	rasterizeLine = "Rasteriez lien",
 	rasterizeEllipse = "Rasteriez ellipes",
 	clear = "Clear",
 	crop = "Crop",
-	tool2 = "moov tool allowz u 2 moov imaeg as u wish. But bees careful: lareg imagez will taek  tiem 2 shift an redraw. y haol thar, shitty GPUs!",
+	tool2 = "Moov tool allowz u 2 moov imaeg as u wish. But bees careful: lareg imagez will taek  tiem 2 shift an redraw. y haol thar, shitty GPUs!",
 	tool3 = "Resizah tool allowz 2 chaneg pictuer siez in real tiem. u can specify preffered direcshun, input width an heiet modifiers an smart skript will doez teh rest.",
 	expand = "Expand",
 	tool4 = "Pickah tool allowz 2 select interestd daat frum imaeg as primawee or secondawee color. u can configuer ov wut colors 2 pick.",
@@ -57,33 +57,35 @@
 	drawAlpha = "Draw alaf:",
 	drawSym = "Draw symbol:",
 	symToDraw = "Symbol 2 draw wif",
-	alphaVal = "alaf value: ",
+	alphaVal = "Alaf value: ",
 	radius = "Radius: ",
 	tool6 = "Erasah tool will cleanup pixels jus likes brush tool. u can configuer ov wut daat iz ned 2 bees erased",
 	eraseBack = "Eraes bakground:",
 	eraseFor = "Eraes foreground:",
 	eraseAlpha = "Eraes alaf:",
 	eraseSym = "Eraes symbol:",
-	tool7 = "Text tool allowz u 2 tyep sum text daat wif selectd primawee color riet on ur imaeg. iz tiem 2 sai \"ur mom gay\" 2 evryoen ",
-	tool8 = "Imaeg",
-	tool9 = "Edit",
-	image = "Rotaet by 90 degrees",
-	edit = "Rotaet by 180 degrees",
-	rotate90 = "Rotaet by 270 degrees",
-	rotate180 = "Flip vertical",
-	rotate270 = "Flip horizontal",
-	flipVertical = "Hue/Saturation",
-	flipHorizontal = "Color balanec",
-	hueSaturation = "foot filtr",
-	colorBalance = "Invert colors",
-	photoFilter = "Black an whiet",
-	invertColors = "Gaussian blur",
-	blackWhite = "Hue: ",
-	gaussianBlur = "Saturation: ",
-	hue = "brightnes: ",
-	saturation = "filtr color ",
-	brightness = "Transparency: ",
-	filterColor = "Forec",
-	transparency = "Rasteriez polygon ",
-	force = "numbr ov polygon edgez:"
+	tool7 = "Text tool allowz u 2 tyep sum text daat wif selectd primawee color riet on ur imaeg!  iz tiem 2 sai \"ur mom gay\" 2 evryoen ",
+	tool8 = "Fill tool allowz u 2 automatically fill areas wif selectd primawee color jus likes in Panet. o Ceiling Cat, wah iz mah Mices...?",
+	tool9 = "Brailel tool allowz u 2 draw pixels wif Brailel symbols on ur imaeg. Select preferrd miin-pixels via meun aboev, configuer transparency affecting an \"Let's go fellas!\"",
+	image = "Imaeg",
+	edit = "Edit",
+	rotate90 = "Rotaet by 90 degrees",
+	rotate180 = "Rotaet by 180 degrees",
+	rotate270 = "Rotaet by 270 degrees",
+	flipVertical = "Flip vertical",
+	flipHorizontal = "Flip horizontal",
+	hueSaturation = "Hue/Saturation",
+	colorBalance = "Color balanec",
+	photoFilter = "foot filtr",
+	invertColors = "Invert colors",
+	blackWhite = "Black an whiet",
+	gaussianBlur = "Gaussian blur",
+	hue = "Hue: ",
+	saturation = "Saturation: ",
+	brightness = "brightnes: ",
+	filterColor = "filtr color",
+	transparency = "Transparency: ",
+	force = "Forec",
+	rasterizePolygon = "Rasteriez polygon",
+	polygonEdges = "numbr ov polygon edgez:"
 }
