--- a/Applications/VK.app/Localizations/Lolcat.lang
+++ b/Applications/VK.app/Localizations/Lolcat.lang
@@ -168,7 +168,7 @@
 	conversations = "Conversations",
 	you = "u: ",
 	typeMessageHere = "riet  mesaeg...",
-	fwdMessages = "informashun: ",
+	fwdMessages = "Informashun: ",
 	attachments = "Investments: ",
 	attachmentsTypes = {
 		photo = "foot",
