--- a/Applications/App Market.app/Localizations/Lolcat.lang
+++ b/Applications/App Market.app/Localizations/Lolcat.lang
@@ -14,13 +14,14 @@
 	yourText = "u:",
 	hereBeYourDialogs = "hah will bees ur conversations",
 	hideApplicationIcons = "Hied applicashun iconz",
+	hideApplicationPreviews = "Hied applicashun previews",
 	
 	categoryOverview = "Overview",
 	categoryApplications = "applicashuns",
 	categoryLibraries = "Libraries",
-	categoryScripts = "scriptz",
-	categoryUpdates = "updatez",
-	categoryWallpapers = "wlpooperz",
+	categoryScripts = "Scriptz",
+	categoryUpdates = "Updatez",
+	categoryWallpapers = "Wlpooperz",
 	
 	statisticsNewUser = "nu usr",
 	statisticsMostPopularUser = "Most actiev",
@@ -53,6 +54,7 @@
 	add = "Add",
 	relativePath = "Relatiev path",
 	localizationDependency = "Localization fiel",
+	previewDepencency = "Preview imaeg",
 	
 	login = "Log in",
 	profile = "Profiel",
@@ -96,6 +98,7 @@
 	license = "Licenes",
 	category = "Categowee",
 	updated = "updatd",
+	uniqueDownloads = "Unique downloadz",
 	reviews = "reviewz",
 	yourRating = "ur ratin",
 	writeReviewHere = "Tyep review text hah",
